[package]
name = "syncstorage"
version = "0.1.0"
license = "MPL-2.0"
authors = [
  "Ben Bangert <ben@groovie.org>",
  "Phil Jenvey <pjenvey@underboss.org>",
]

[profile.release]
# Enables line numbers in Sentry
debug = 1

[dependencies]
actix = "0.8.1"
actix-web = "1.0.0-beta.2"
base64 = "0.10.1"
cadence = "0.17.1"
chrono = "0.4.6"
config = "0.9.2"
diesel = { version = "1.4.2", features = ["mysql", "r2d2"] }
diesel_logger = "0.1.0"
diesel_migrations = { version = "1.4.0", features = ["mysql"] }
docopt = "1.1.0"
env_logger = "0.6.1"
failure = "0.1.5"
futures = "0.1.26"
lazy_static = "1.3.0"
hawk = "2.0.0"
hkdf = "0.7.0"
hmac = "0.7.0"
mozsvc-common = "0.1.0"
num = "0.2.0"
num_cpus = "1.10.0"
rand = "0.6.5"
regex = "1.1.6"
ring = "0.14"
sentry = "0.15.4"
serde = "1.0.90"
serde_derive = "1.0.90"
serde_json = "1.0.39"
sha2 = "0.8.0"
time = "0.1.42"
tokio-threadpool = "0.1.14"
uuid = { version = "0.7.4", features = ["serde", "v4"] }
validator = "0.8.0"
validator_derive = "0.8.0"
